app_wrong.yaml
apiVersion: v1
kind: Pod
metadata:
  name: not-smooth-app
spec:
  containers:
  - image: container1:good
    name: container1-good
  - image: container2:bad
    name: container2-good
  - image: box-registry.jfrog.io/jenkins/wall-e:19e3b090ddce-2019.06.19_13.14.17
    name: container3-badddd
  - image: container4:bad
    name: container4-good
  - image: container5bad:xxx
    name: container5bad-xxx
