_manifest_.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grumpy
  namespace: default
  labels:
    name: grumpy
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: grumpy 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grumpy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grumpy
  template:
    metadata:
      name: grumpy 
      labels:
        name: grumpy
    spec:
      containers:
        - name: webhook
          image: pipo02mix/grumpy:1.0.0
          imagePullPolicy: Always
          command:
            - runascontainer
            - bin/bash
            - -c
            - ./usr/bin/grumpy -alsologtostderr --log_dir=/ -v=10 2>&1
	    - name: POD_NAME
	      valueFrom:
	        fieldRef:
		  fieldPath:
		    metadata.name
          securityContext:
	    capabilities:
	      drop:
	        - FSETID
		- FOWNER
		- MKNOD
		- SETPCAP
		- SYS_CHROOT
		- KILL
		- AUDIT_WRITE
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 00Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: grumpy
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: grumpy
webhooks:
  - name: grumpy.pipo02mix.org
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: grumpy
        namespace: default
        path: "/validate"
      caBundle: "${CA_BUNDLE}"
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
    sideEffects: None
